--- a/themes/dot/layouts/partials/navigation.html
+++ b/themes/dot/layouts/partials/navigation.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="{{ .Site.BaseURL }}{{ .Language.LanguageName | lower }}">{{ .Site.Params.logo }}</a>
+  <a class="navbar-brand" href="{{ .Site.BaseURL }}{{ .Language.LanguageName | lower }}/">{{ .Site.Params.logo }}</a>
   <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navigation"
     aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
