--- a/themes/dot/layouts/partials/navigation.html
+++ b/themes/dot/layouts/partials/navigation.html
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse text-center" id="navigation">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link text-dark" href="{{ .Site.BaseURL }}{{ .Language.LanguageName | lower }}">{{ .Site.Params.home }}</a>
+        <a class="nav-link text-dark" href="{{ .Site.BaseURL }}{{ .Language.LanguageName | lower }}/">{{ .Site.Params.home }}</a>
       </li>
       {{ range .Site.Menus.main }}
       {{ if .HasChildren }}
